Set Render Option Definition
+Add function definitions of Renderable class

--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -145,17 +145,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Renderable.cpp" />
     <ClCompile Include="Source\Application.cpp" />
+    <ClCompile Include="Source\Renderable.cpp" />
     <ClCompile Include="Source\Shader.cpp" />
     <ClCompile Include="Source\System.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Renderable.h" />
     <ClInclude Include="Source\Shader.h" />
     <ClInclude Include="Source\System.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Renderable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
