Input testing(successful)
testing the basic input system. Can receive key input and print something out.

--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClCompile Include="Source\Application.cpp" />
     <ClCompile Include="Source\GameObject.cpp" />
+    <ClCompile Include="Source\Input.cpp" />
     <ClCompile Include="Source\Renderable.cpp" />
     <ClCompile Include="Source\Shader.cpp" />
     <ClCompile Include="Source\System.cpp" />
@@ -155,6 +156,7 @@
   <ItemGroup>
     <ClInclude Include="SOIL.h" />
     <ClInclude Include="Source\GameObject.h" />
+    <ClInclude Include="Source\Input.h" />
     <ClInclude Include="Source\Renderable.h" />
     <ClInclude Include="Source\Shader.h" />
     <ClInclude Include="Source\System.h" />
