--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -33,10 +33,7 @@
     <ClCompile Include="Source\TestRender.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Camera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Input.cpp">
+    <ClCompile Include="Source\Collision.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -59,10 +56,7 @@
     <ClInclude Include="SOIL.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Input.h">
+    <ClInclude Include="Source\Collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
