--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -19,8 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Component.h" />
     <ClInclude Include="Source\ECS.h" />
     <ClInclude Include="Source\GameObject.h" />
+    <ClInclude Include="Transform.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
