--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -45,5 +45,11 @@
     <ClInclude Include="Source\GameObject.h">
       <Filter>ECS\Header File</Filter>
     </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>ECS\Header File</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>ECS\Header File</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
