--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -37,6 +37,15 @@
     <Filter Include="Game\Source FIle">
       <UniqueIdentifier>{ca40bbc0-2e05-43b0-a5e1-ee9b95494a41}</UniqueIdentifier>
     </Filter>
+    <Filter Include="System File">
+      <UniqueIdentifier>{f393a5e5-b5cf-4f26-ae13-0c61086be694}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="System File\Header File">
+      <UniqueIdentifier>{18e736fe-e8c1-43b3-9e49-1a0648f15d0c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="System File\Source File">
+      <UniqueIdentifier>{169601c1-b911-4848-b241-6643e0ce01be}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ECS.h">
@@ -45,5 +54,13 @@
     <ClInclude Include="Source\GameObject.h">
       <Filter>ECS\Header File</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Camera.h">
+      <Filter>System File\Header File</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source\Camera.cpp">
+      <Filter>System File\Source File</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
