Completed ECS.h Component.h Vector2D.h and GameObject.h

--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -45,11 +45,15 @@
     <ClInclude Include="Source\GameObject.h">
       <Filter>ECS\Header File</Filter>
     </ClInclude>
-    <ClInclude Include="Component.h">
+    <ClInclude Include="Source\Component.h">
       <Filter>ECS\Header File</Filter>
     </ClInclude>
-    <ClInclude Include="Transform.h">
+    <ClInclude Include="Source\Transform.h">
       <Filter>ECS\Header File</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Vector2D.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source\Source.cpp" />
   </ItemGroup>
 </Project>
