--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -19,10 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Component.h" />
+    <ClInclude Include="Source\Component.h" />
     <ClInclude Include="Source\ECS.h" />
     <ClInclude Include="Source\GameObject.h" />
-    <ClInclude Include="Transform.h" />
+    <ClInclude Include="Source\Transform.h" />
+    <ClInclude Include="Source\Vector2D.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source\Source.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
