--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj
@@ -21,11 +21,13 @@
   <ItemGroup>
     <ClInclude Include="Source\Component.h" />
     <ClInclude Include="Source\ECS.h" />
+    <ClInclude Include="Source\EntityManager.h" />
     <ClInclude Include="Source\GameObject.h" />
     <ClInclude Include="Source\Transform.h" />
     <ClInclude Include="Source\Vector2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\EntityManager.cpp" />
     <ClCompile Include="Source\TestMain.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
