--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -54,9 +54,15 @@
     <ClInclude Include="Source\Vector2D.h">
       <Filter>ECS\Header File</Filter>
     </ClInclude>
+    <ClInclude Include="Source\EntityManager.h">
+      <Filter>ECS\Header File</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\TestMain.cpp">
+      <Filter>ECS\Source File</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\EntityManager.cpp">
       <Filter>ECS\Source File</Filter>
     </ClCompile>
   </ItemGroup>
