Implement Camera function
+ Camera.h /.cpp

--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -93,6 +93,7 @@
     <ClInclude Include="Source\RigidBody.h">
       <Filter>ECS\Header File</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Camera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\AssetManager.cpp">
@@ -119,5 +120,7 @@
     <ClCompile Include="Source\TestMain.cpp">
       <Filter>ECS\Source File</Filter>
     </ClCompile>
+    <ClCompile Include="Source\TestMain.cpp" />
+    <ClCompile Include="Source\Camera.cpp" />
   </ItemGroup>
 </Project>
