--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -93,7 +93,9 @@
     <ClInclude Include="Source\RigidBody.h">
       <Filter>ECS\Header File</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Camera.h" />
+    <ClInclude Include="Source\Camera.h">
+      <Filter>System File\Header File</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\AssetManager.cpp">
@@ -108,9 +110,6 @@
     <ClCompile Include="Source\Engine.cpp">
       <Filter>System File\Source File</Filter>
     </ClCompile>
-    <ClCompile Include="Source\TestMain.cpp">
-      <Filter>ECS\Source File</Filter>
-    </ClCompile>
     <ClCompile Include="Source\EntityManager.cpp">
       <Filter>ECS\Source File</Filter>
     </ClCompile>
@@ -121,6 +120,9 @@
       <Filter>ECS\Source File</Filter>
     </ClCompile>
     <ClCompile Include="Source\TestMain.cpp" />
-    <ClCompile Include="Source\Camera.cpp" />
+    <ClCompile Include="Source\TestMain.cpp" />
+    <ClCompile Include="Source\Camera.cpp">
+      <Filter>System File\Source File</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
