--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="Source\Camera.h">
       <Filter>System File\Header File</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Sprite.h">
+      <Filter>ECS\Header File</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\AssetManager.cpp">
@@ -115,9 +118,6 @@
     </ClCompile>
     <ClCompile Include="Source\Shader.cpp">
       <Filter>System File\Source File</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\TestMain.cpp">
-      <Filter>ECS\Source File</Filter>
     </ClCompile>
     <ClCompile Include="Source\TestMain.cpp" />
     <ClCompile Include="Source\TestMain.cpp" />
