Still not working
-_-

--- a/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
+++ b/SrandEngine/SrandEngine/SrandEngine.vcxproj.filters
@@ -120,5 +120,6 @@
     <ClCompile Include="Source\Camera.cpp">
       <Filter>System File\Source File</Filter>
     </ClCompile>
+    <ClCompile Include="Source\TestMain.cpp" />
   </ItemGroup>
 </Project>
